<resources>
    <string name="app_name">Money</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_username_text">Username</string>
    <string name="login_password_text">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="login_lg_text">LOGIN</string>
    <string name="list_text">List</string>
    <string name="menu_add">Add</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_debtor">Debtor</string>
    <string name="menu_menu">Menu</string>

    <string name="add_name">Name</string>
    <string name="add_surname">Surname</string>
    <string name="add_amount">Amount</string>
    <string name="add_save">Save</string>
    <string name="add_cancel">Cancel</string>

    <string name="about_text">About</string>
    <string name="about_name">Jakgrit Chuenboon</string>
    <string name="about_id">59160002</string>

    <string name="clear_btn">Clear</string>

    <string name="share">Share</string>
    <string name="logout">Logout</string>

</resources>
